Fixed a huge overflow mess

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -61,6 +61,7 @@ body {
   justify-content: center;
   flex-direction: column;
   z-index: 0;
+  overflow-x: hidden;
 }
 .start-view {
   display: flex;
@@ -117,7 +118,6 @@ body {
   font-size: 32px;
 }
 .dropdown {
-  margin-right: 20px;
   font-size: 32px;
   display: none;
   cursor: pointer;
@@ -177,6 +177,7 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  overflow-x: hidden;
 }
 .article {
   width: 65vw;
